# django-app-permissions

./: LICENSE  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: python-publish.yml
django_app_permissions/: views.py
django_app_permissions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_app_permissions/management/commands/: resolve_app_groups.py
django_app_permissions/middleware/: auth.py
