[metadata]
name = django_app_permissions
version = 0.0.0
description = More advanced features for the Django Rest Framework rest_framework.authtoken app
long_description = file: README.rst
url = https://github.com/amp89/django-app-permissions
author = Alex Peterson
license_file = LICENSE

[options]
include_package_data = true
packages = find: